src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_string_literals.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: results
---
- - "\"hello\""
  - - content: "\"hello\""
      fg: "rgb(107,203,119)"
- - "\"hello world\""
  - - content: "\"hello world\""
      fg: "rgb(107,203,119)"
- - "\"hello \\\"escaped\\\" world\""
  - - content: "\"hello \\\"escaped\\\" world\""
      fg: "rgb(107,203,119)"
- - "\"unicode: 世界\""
  - - content: "\"unicode: 世界\""
      fg: "rgb(107,203,119)"
