src/syntax_highlight_tests/snapshots/jiq__syntax_highlight__syntax_highlight_tests__snapshot_tests__snapshot_whitespace_handling.snap
---
source: src/syntax_highlight_tests/snapshot_tests.rs
expression: serialize_spans(&spans)
---
- content: "  "
  fg: "rgb(236,236,244)"
- content: ".name"
  fg: "rgb(236,236,244)"
- content: "  "
  fg: "rgb(236,236,244)"
- content: "|"
  fg: "rgb(198,120,221)"
- content: "  "
  fg: "rgb(236,236,244)"
- content: ".age"
  fg: "rgb(236,236,244)"
- content: "  "
  fg: "rgb(236,236,244)"
